# Promps_poject_2019

./: README.md
belief_tracker/: CMakeLists.txt  package.xml  setup.py
belief_tracker/config/: full_setup.rviz  goal_tracker.rviz  goal_tracker_darias.rviz
belief_tracker/data/: goals.csv
belief_tracker/data/goals/: real_goals.csv~
belief_tracker/data/transition_probabilities/: belief_tracker_params_default.pkl  test_prob~
belief_tracker/include/belief_tracker/: belief_tracker_class.py  data_evaluator.py  history.py
belief_tracker/launch/: all.launch  belief_tracker.launch  belief_tracker.launch~  belief_tracker_rviz.launch  belief_tracker_sim_human.launch~  csv_to_tf.launch~  goal_tracker.launch  goal_tracker.launch~  goal_tracker_online.launch~  goal_tracker_sim_human.launch  goal_tracker_sim_human.launch~  human_trajectory_recording.launch
belief_tracker/recorded_data/userstudy_all/: .pkl
belief_tracker/recorded_data/userstudy_all/A21M/: A21M_no_mode.csv  A21M_no_robot.csv  A21M_spatial.csv  A21M_temporal.csv  belief_A21M.pkl  goals_A21M.csv
belief_tracker/scripts/: belief.py  belief_io.py  belief_tracker_node.py  csv_to_tf.py  evaluate_belief_ral.py  evaluate_csv_data.py  evaluate_experiments.py  goal_evaluation_ral.py  goal_tracker.py  goal_tracker_visualization.py  human_trajectory_recording.py  velocity_between_goals.py
promp_robot_control_msgs/: CMakeLists.txt  package.xml
promp_robot_control_msgs/msg/: PredictedTrajectories.msg  PrompStatus.msg  Start.msg~  TemporalScalingStatus.msg
promp_robot_control_msgs/srv/: Belief.srv  ChangeState.srv  Goals.srv  OnlinePhaseAdaptationUpdate.srv  PrompControlUpdate.srv  StartExperiment.srv
(+790 files in other folders)
